[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://scenes/SkullSpawnPoint.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/PowerSkull.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/PlayerInfo.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/UI.gd" type="Script" id=7]
[ext_resource path="res://scripts/skull spawner/SkullSpawner.gd" type="Script" id=8]
[ext_resource path="res://scripts/FPSLabel.gd" type="Script" id=9]
[ext_resource path="res://sprites/tiles/bw_tiles.tres" type="TileSet" id=10]
[ext_resource path="res://scenes/Chest.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/SplatLayer.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/bg/space/Stars Small_1.png" type="Texture" id=13]
[ext_resource path="res://sprites/bg/space/Nebula Gray.png" type="Texture" id=14]
[ext_resource path="res://sprites/explosions/splat1.png" type="Texture" id=15]
[ext_resource path="res://sprites/bg/space/Stars Small_2.png" type="Texture" id=16]
[ext_resource path="res://sprites/explosions/splat2.png" type="Texture" id=17]
[ext_resource path="res://sprites/explosions/splat3.png" type="Texture" id=18]
[ext_resource path="res://scripts/CameraShake.gd" type="Script" id=19]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 0.992157, 0.74902, 0.482353, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
bg_color = Color( 0.992157, 0.74902, 0.482353, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
bg_color = Color( 0.992157, 0.74902, 0.482353, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
resource_local_to_scene = true
bg_color = Color( 0.992157, 0.74902, 0.482353, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0, 0, 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." groups=["cameras"]]
rotating = true
current = true
zoom = Vector2( 1.5, 1.53 )
script = ExtResource( 3 )
move_speed = 0.0
zoom_speed = 0.0

[node name="CameraShake" type="Node" parent="Camera2D"]
script = ExtResource( 19 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="FPSLabel" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
text = "text"
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -986.0
margin_top = 7.0
margin_right = 934.0
margin_bottom = 1062.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -486.0
margin_right = 486.0
margin_bottom = 65.0
alignment = 1

[node name="PlayerInfo1" parent="UI/UI/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 286.0
margin_right = 383.0
margin_bottom = 65.0
rect_clip_content = true
custom_styles/panel = SubResource( 1 )

[node name="PlayerInfo2" parent="UI/UI/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 387.0
margin_right = 484.0
margin_bottom = 65.0
rect_clip_content = true
custom_styles/panel = SubResource( 2 )

[node name="PlayerInfo3" parent="UI/UI/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 488.0
margin_right = 585.0
margin_bottom = 65.0
rect_clip_content = true
custom_styles/panel = SubResource( 3 )

[node name="PlayerInfo4" parent="UI/UI/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 589.0
margin_right = 686.0
margin_bottom = 65.0
rect_clip_content = true
custom_styles/panel = SubResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 1, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 561, 499 )
texture = ExtResource( 14 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
modulate = Color( 1, 1, 1, 0.427451 )
position = Vector2( 561, 499 )
texture = ExtResource( 13 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
visible = false
modulate = Color( 1, 1, 1, 0.427451 )
position = Vector2( 1233, 157 )
texture = ExtResource( 16 )

[node name="TileMap2" type="TileMap" parent="." groups=["level"]]
tile_set = ExtResource( 10 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 1, 1, 0, 196610, 2, 0, 196610, 3, 0, 196610, 4, 0, 196610, 5, 0, 196610, 6, 0, 196610, 7, 0, 196610, 8, 0, 196610, 9, 0, 196610, 10, 0, 196610, 11, 0, 196610, 12, 0, 196610, 13, 0, 196610, 14, 0, 196610, 15, 0, 196610, 16, 0, 196610, 17, 0, 196610, 18, 0, 196610, 19, 0, 196610, 20, 0, 196610, 21, 0, 196610, 22, 0, 196610, 23, 0, 196610, 24, 0, 196610, 25, 0, 196610, 26, 0, 196610, 27, 0, 196610, 28, 0, 196610, 29, 0, 196610, 30, 0, 196610, 31, 0, 196610, 32, 0, 3, 65536, 0, 65536, 65568, 0, 65536, 131072, 0, 65536, 131104, 0, 65536, 196608, 0, 65536, 196640, 0, 65536, 262144, 0, 65536, 262176, 0, 65536, 327680, 0, 65536, 327712, 0, 65536, 393216, 0, 65537, 393217, 0, 196610, 393218, 0, 196610, 393219, 0, 196610, 393220, 0, 196610, 393221, 0, 196610, 393222, 0, 196610, 393223, 0, 196610, 393224, 0, 196611, 393240, 0, 196609, 393241, 0, 196610, 393242, 0, 196610, 393243, 0, 196610, 393244, 0, 196610, 393245, 0, 196610, 393246, 0, 196610, 393247, 0, 196610, 393248, 0, 65539, 458752, 0, 65536, 458784, 0, 65536, 524288, 0, 65536, 524320, 0, 65536, 589824, 0, 65536, 589856, 0, 65536, 655360, 0, 65536, 655392, 0, 65536, 720896, 0, 65536, 720928, 0, 65536, 786432, 0, 65536, 786437, 0, 196609, 786438, 0, 196610, 786439, 0, 196610, 786440, 0, 196610, 786441, 0, 196610, 786442, 0, 196610, 786443, 0, 196610, 786444, 0, 196611, 786452, 0, 196609, 786453, 0, 196610, 786454, 0, 196610, 786455, 0, 196610, 786456, 0, 196610, 786457, 0, 196610, 786458, 0, 196610, 786459, 0, 196611, 786464, 0, 65536, 851968, 0, 65536, 852000, 0, 65536, 917504, 0, 65536, 917536, 0, 65536, 983040, 0, 65536, 983072, 0, 65536, 1048576, 0, 65536, 1048608, 0, 65536, 1114112, 0, 65536, 1114144, 0, 65536, 1179648, 0, 65536, 1179662, 0, 196609, 1179663, 0, 196610, 1179664, 0, 196610, 1179665, 0, 196610, 1179666, 0, 196611, 1179680, 0, 65536, 1245184, 0, 65536, 1245216, 0, 65536, 1310720, 0, 65536, 1310752, 0, 65536, 1376256, 0, 65536, 1376288, 0, 65536, 1441792, 0, 65536, 1441824, 0, 65536, 1507328, 0, 65536, 1507360, 0, 65536, 1572864, 0, 65536, 1572869, 0, 196609, 1572870, 0, 196610, 1572871, 0, 196610, 1572872, 0, 196610, 1572873, 0, 196610, 1572874, 0, 196610, 1572875, 0, 196610, 1572876, 0, 196611, 1572884, 0, 196609, 1572885, 0, 196610, 1572886, 0, 196610, 1572887, 0, 196610, 1572888, 0, 196610, 1572889, 0, 196610, 1572890, 0, 196610, 1572891, 0, 196611, 1572896, 0, 65536, 1638400, 0, 65536, 1638432, 0, 65536, 1703936, 0, 65536, 1703968, 0, 65536, 1769472, 0, 65536, 1769504, 0, 65536, 1835008, 0, 65536, 1835040, 0, 65536, 1900544, 0, 65536, 1900576, 0, 65536, 1966080, 0, 131073, 1966081, 0, 196610, 1966082, 0, 196610, 1966083, 0, 196610, 1966084, 0, 196610, 1966085, 0, 196610, 1966086, 0, 196610, 1966087, 0, 196610, 1966088, 0, 196610, 1966089, 0, 196610, 1966090, 0, 196610, 1966091, 0, 196610, 1966092, 0, 196610, 1966093, 0, 196610, 1966094, 0, 196610, 1966095, 0, 196610, 1966096, 0, 196610, 1966097, 0, 196610, 1966098, 0, 196610, 1966099, 0, 196610, 1966100, 0, 196610, 1966101, 0, 196610, 1966102, 0, 196610, 1966103, 0, 196610, 1966104, 0, 196610, 1966105, 0, 196610, 1966106, 0, 196610, 1966107, 0, 196610, 1966108, 0, 196610, 1966109, 0, 196610, 1966110, 0, 196610, 1966111, 0, 196610, 1966112, 0, 131075 )

[node name="SplatLayer" parent="TileMap2" instance=ExtResource( 12 )]
splat_textures = [ ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ) ]

[node name="SkullSpawner" type="Node" parent="."]
script = ExtResource( 8 )
skull_spawn_variation = 1.0
furthest_point_variation = 15
powerskull_scene = ExtResource( 5 )
chest_scene = ExtResource( 11 )

[node name="SkullSpawnTimer" type="Timer" parent="SkullSpawner"]

[node name="SkullSpawnPoint" parent="SkullSpawner" instance=ExtResource( 4 )]
position = Vector2( 303, 690 )

[node name="SkullSpawnPoint2" parent="SkullSpawner" instance=ExtResource( 4 )]
position = Vector2( 783, 693 )

[node name="SkullSpawnPoint3" parent="SkullSpawner" instance=ExtResource( 4 )]
position = Vector2( 943, 900 )

[node name="SkullSpawnPoint4" parent="SkullSpawner" instance=ExtResource( 4 )]
position = Vector2( 539, 896 )

[node name="SkullSpawnPoint5" parent="SkullSpawner" instance=ExtResource( 4 )]
position = Vector2( 104, 891 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 307, 876 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 753, 300 )

[node name="PowerSkull" parent="." instance=ExtResource( 5 )]
position = Vector2( 868, 482 )
powerskull_type = 2

[node name="PowerSkull2" parent="." instance=ExtResource( 5 )]
position = Vector2( 677, 472 )
mass = 0.102041

[connection signal="timeout" from="SkullSpawner/SkullSpawnTimer" to="SkullSpawner" method="_on_SkullSpawnTimer_timeout"]
